# eltech_pca

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.cpp
src/lab1/: main.cpp
src/lab2/: main.cpp
src/lab2_mpich/: main.cpp
src/lab3/: main.cpp
src/lab4/: main.cpp
src/lab5/: main.cpp
